# simple-physics-engine

./: .gitignore  CMakeLists.txt  README.md
include/engine/: collision_detector.h  collision_resolver.h  force_generator_abstract.h  particle.h  precision.h  vector.h
src/: ball.cpp  ball.h  collision_detector.cpp  collision_resolver.cpp  demo_spring.cpp  main.cpp  particle.cpp  spring.cpp  spring.h
src/game_demo/: CMakeLists.txt  ball.cpp  ball.h  simulation_renderer.cpp  simulation_renderer.h  spring.cpp  world.cpp  world.h
src/game_demo/world_objects/: ball.cpp  ball.h  box.cpp  box.h  game_object.h  spring.cpp  spring.h  wall.cpp  wall.h
tests/: CMakeLists.txt  tests_detector.cpp  tests_main.cc  tests_particle.cpp  tests_resolver.cpp
